# trust

./: .gitignore  CORRECTNESS_LEDGER.md  Cargo.toml  INSTALL.md  README.md  bootstrap.example.toml
cargo-trust/: Cargo.toml  README.md
cargo-trust/src/: cli.rs  config.rs  diff.rs  diff_git.rs  diff_report.rs  init.rs  main.rs  pipeline.rs  project_root.rs  report.rs  rewrite_loop.rs  solver_detect.rs  source_analysis.rs  tests.rs  types.rs
compiler/rustc_codegen_llvm2/: Cargo.toml
compiler/rustc_codegen_llvm2/src/: lib.rs
compiler/rustc_mir_transform/: Cargo.toml
compiler/rustc_mir_transform/src/: abort_unwinding_calls.rs  add_moves_for_packed_drops.rs  add_subtyping_projections.rs  check_alignment.rs  check_call_recursion.rs  check_const_item_mutation.rs  check_enums.rs  check_inline_always_target_features.rs  check_null.rs  check_packed_ref.rs  check_pointers.rs  check_target_feature_abi.rs  coroutine.rs  cost_checker.rs  cross_crate_inline.rs  dataflow_const_prop.rs  dead_store_elimination.rs  deref_separator.rs  dest_prop.rs  early_otherwise_branch.rs  elaborate_box_derefs.rs  elaborate_drop.rs  elaborate_drops.rs  errors.rs  ffi_unwind_calls.rs  function_item_references.rs  gvn.rs  inline.rs  instsimplify.rs  jump_threading.rs  known_panics_lint.rs  large_enums.rs  lib.rs  lint_tail_expr_drop_order.rs  liveness.rs  lower_intrinsics.rs  match_branches.rs  mentioned_items.rs  pass_manager.rs  patch.rs  (+21 more)
crates/: Cargo.toml
crates/ait-buildd/: Cargo.toml
crates/ait-buildd/src/: lib.rs  priority.rs  protocol.rs  server.rs
crates/trust-backprop/: Cargo.toml
crates/trust-backprop/src/: approval.rs  ast_rewriter.rs  ast_validation.rs  audit_trail.rs  caller_propagation.rs  cross_module.rs  dependency.rs  diff_gen.rs  file_io.rs  governance.rs  lib.rs  locator.rs  proposal_converter.rs  rewriter.rs  rollback.rs  substitution.rs  type_guided.rs
crates/trust-binary-parse/: Cargo.toml
crates/trust-binary-parse/src/: constants.rs  cursor.rs  detect.rs  elf.rs  elf_relocation.rs  error.rs  header.rs  leb128.rs  lib.rs  load_command.rs  macho.rs  pe.rs  read.rs  relocation.rs  symbol.rs  unified.rs
crates/trust-cache/: Cargo.toml
crates/trust-cache/src/: alpha_normalize.rs  analytics.rs  bloom_filter.rs  compression.rs  coordination.rs  counterexample_cache.rs  distributed.rs  distributed_cache.rs  eviction.rs  fingerprint.rs  impact_analysis.rs  incremental.rs  independence.rs  integrity.rs  invalidation.rs  invalidation_strategy.rs  lib.rs  mir_hash.rs  pattern_match.rs  proof_replay.rs  proptest_roundtrip.rs  query_cache.rs  result_cache.rs  reuse.rs  semantic_cache.rs  sharding.rs  spec_aware_cache.rs  spec_change_detector.rs  sub_query_splitter.rs  vc_cache.rs  warming.rs
crates/trust-cache/tests/: proptest_cache.rs
crates/trust-cegar/: Cargo.toml
crates/trust-cegar/src/: abstract_lattice.rs  abstraction.rs  cegar_loop.rs  chc.rs  chc_cegar.rs  cpa.rs  error.rs  ic3_cegar.rs  interpolation.rs  interpolation_refine.rs  invariant_extract.rs  lattice.rs  lazy.rs  lazy_abstraction.rs  lib.rs  pdr_certificates.rs  portfolio.rs  predicate.rs  predicate_abstraction.rs  predicate_discovery.rs  predicate_refinement.rs  refinement.rs  sat_oracle.rs  spacer.rs  strategy.rs  widening.rs  z4_bridge.rs
crates/trust-cegar/tests/: ic3_cegar_bridge.rs
crates/trust-codegen-llvm2/: Cargo.toml
crates/trust-codegen-llvm2/src/: lib.rs
crates/trust-config/: Cargo.toml
crates/trust-config/src/: env_override.rs  file_config.rs  hot_reload.rs  lib.rs  loader.rs  presets.rs  profile.rs  scope.rs  validation.rs
crates/trust-convergence/: Cargo.toml
crates/trust-convergence/src/: acceleration.rs  alerts.rs  analysis.rs  bisection.rs  dashboard_data.rs  error.rs  export.rs  feedback.rs  fixpoint.rs  fixpoint_widening.rs  integration.rs  lib.rs  loop_convergence.rs  lyapunov.rs  metrics.rs  monotonicity.rs  oscillation.rs  persistence.rs  proof_strength_propagation.rs  snapshot.rs  stagnation.rs  strategy_selector.rs  termination.rs  visualization.rs  widening.rs
crates/trust-convergence/tests/: convergence_pipeline.rs  loop_integration.rs
crates/trust-crown/: Cargo.toml
crates/trust-crown/src/: error.rs  lib.rs  types.rs
crates/trust-debug/: Cargo.toml
crates/trust-debug/src/: binary.rs  blame.rs  cfg.rs  cfg_fast.rs  diff_diagnosis.rs  differential.rs  exploitability.rs  injection.rs  interactive.rs  lib.rs  library_summaries.rs  lifter.rs  minimization.rs  pcode.rs  profiling.rs  proof_explain.rs  report.rs  root_cause.rs  scoring.rs  security.rs  severity.rs  trace_minimize.rs  triage.rs  vex_lift.rs  violations.rs
crates/trust-decompile/: Cargo.toml
crates/trust-decompile/src/: beautify.rs  emit.rs  error.rs  lib.rs  ownership.rs  patterns.rs  types.rs
crates/trust-disasm/: Cargo.toml
crates/trust-disasm/src/: arch.rs  error.rs  instruction.rs  lib.rs  opcode.rs  operand.rs
crates/trust-driver/: Cargo.toml
crates/trust-driver/src/: benchmark.rs  cached_verify.rs  cegar_phase.rs  codegen.rs  compiler.rs  config_bridge.rs  file_loop.rs  incremental.rs  lib.rs  main.rs  parallel.rs  parser.rs  pipeline.rs  profiling.rs  recovery.rs  scheduling.rs  testgen.rs  verification_loop.rs  (+1 more)
crates/trust-integration-tests/: Cargo.toml
crates/trust-lean5/: Cargo.toml
crates/trust-lift/: Cargo.toml
crates/trust-llvm2-bridge/: Cargo.toml
crates/trust-loop/: Cargo.toml
crates/trust-lsp/: Cargo.toml
crates/trust-machine-sem/: Cargo.toml
crates/trust-mir-extract/: Cargo.toml
crates/trust-proof-cert/: Cargo.toml
crates/trust-report/: Cargo.toml
crates/trust-router/: Cargo.toml
crates/trust-runtime/: Cargo.toml
crates/trust-spec/: Cargo.toml
crates/trust-strengthen/: Cargo.toml
crates/trust-sunder-lib/: Cargo.toml
crates/trust-symex/: Cargo.toml
crates/trust-temporal/: Cargo.toml
crates/trust-testgen/: Cargo.toml
crates/trust-tmir-bridge/: Cargo.toml
crates/trust-transval/: Cargo.toml
crates/trust-type-recover/: Cargo.toml
crates/trust-types/: Cargo.toml
crates/trust-vcgen/: Cargo.toml
crates/trust-zani-lib/: Cargo.toml
(+2374 files in other folders)
