# tRust verification pipeline workspace
# Separate from the rustc workspace (root Cargo.toml) to avoid interfering
# with the compiler build system (x.py).
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: MIT OR Apache-2.0

[workspace]
resolver = "2"
members = [
    "trust-binary-parse",
    "trust-cache",
    "trust-cegar",
    "trust-debug",
    "trust-disasm",
    "trust-loop",
    "trust-types",
    "trust-vcgen",
    "trust-router",
    "trust-report",
    "trust-lean5",
    "trust-config",
    "trust-convergence",
    "trust-temporal",
    "trust-proof-cert",
    "trust-strengthen",
    "trust-spec",
    "trust-backprop",
    "trust-symex",
    "trust-transval",
    "trust-integration-tests",
    "trust-lift",
    "trust-machine-sem",
    "trust-lsp",
    "trust-zani-lib",
    "trust-sunder-lib",
    "trust-llvm2-bridge",
    "trust-tmir-bridge",
    "trust-codegen-llvm2",
    "ait-buildd",
]
# trust-mir-extract requires rustc_private (nightly).
exclude = [
    "trust-mir-extract",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Andrew Yates <andrew@andrewdyates.com>"]

[workspace.dependencies]
trust-binary-parse = { path = "trust-binary-parse" }
trust-cache = { path = "trust-cache" }
trust-cegar = { path = "trust-cegar" }
trust-debug = { path = "trust-debug" }
trust-disasm = { path = "trust-disasm" }
trust-loop = { path = "trust-loop" }
trust-types = { path = "trust-types" }
trust-vcgen = { path = "trust-vcgen" }
trust-router = { path = "trust-router" }
trust-report = { path = "trust-report" }
trust-lean5 = { path = "trust-lean5" }
trust-config = { path = "trust-config" }
trust-convergence = { path = "trust-convergence" }
trust-temporal = { path = "trust-temporal" }
trust-proof-cert = { path = "trust-proof-cert" }
trust-strengthen = { path = "trust-strengthen" }
trust-spec = { path = "trust-spec" }
trust-backprop = { path = "trust-backprop" }
trust-symex = { path = "trust-symex" }
trust-transval = { path = "trust-transval" }
trust-integration-tests = { path = "trust-integration-tests" }
trust-lift = { path = "trust-lift" }
trust-machine-sem = { path = "trust-machine-sem" }
trust-lsp = { path = "trust-lsp" }
trust-zani-lib = { path = "trust-zani-lib" }
trust-sunder-lib = { path = "trust-sunder-lib" }
rustc-hash = "2.0.0"
indexmap = "2.7"
sha2 = "0.10"
hmac = "0.12"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1.3"
num-bigint = "0.4"
proptest = "1.11"
reqwest = { version = "0.12", features = ["json", "blocking"], default-features = false }
tla-mc-core = { git = "https://github.com/andrewdyates/tla2", rev = "f96cd001f0a2022000313ef9dd92e4a79f62ba98" }
lean5-kernel = { git = "https://github.com/andrewdyates/lean5" }
rayon = "1.10"
# URL must NOT have .git suffix — zani uses bare URL, and Cargo treats z4.git vs z4 as different sources.
z4 = { git = "https://github.com/andrewdyates/z4" }
# tRust: z4-bindings typed builder API for direct z4 integration
z4-bindings = { git = "https://github.com/andrewdyates/z4" }
# tRust #879: z4-proof-common shared types for proof checker crates
z4-proof-common = { git = "https://github.com/andrewdyates/z4" }
# tRust: zani bounded model checker
zani-verifier = { git = "https://github.com/andrewdyates/zani" }
# tRust: zani_core VC IR for direct BMC/CHC integration
zani_core = { git = "https://github.com/andrewdyates/zani" }
# tRust: sunder deductive verification
sunder-core = { git = "https://github.com/andrewdyates/sunder" }
sunder-z4 = { git = "https://github.com/andrewdyates/sunder" }
# tRust: certus ownership-aware verification
certus-core = { git = "https://github.com/andrewdyates/certus" }
# tRust #815: LLVM2 verified codegen backend
# URL must NOT have .git suffix — Cargo treats them as different sources.
llvm2-ir = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-lower = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-verify = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-codegen = { git = "https://github.com/andrewdyates/LLVM2" }
trust-llvm2-bridge = { path = "trust-llvm2-bridge" }
trust-tmir-bridge = { path = "trust-tmir-bridge" }
trust-codegen-llvm2 = { path = "trust-codegen-llvm2" }
ait-buildd = { path = "ait-buildd" }
# tRust #869: tMIR universal proof-carrying IR
tmir = { git = "https://github.com/andrewdyates/tMIR" }
tempfile = "3"
fs2 = "0.4"
anyhow = "1"
dirs = "5"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
