[package]
name = "rustc_mir_transform"
version = "0.0.0"
edition = "2024"

[dependencies]
# tidy-alphabetical-start
either = "1"
itertools = "0.12"
rustc_abi = { path = "../rustc_abi" }
rustc_arena = { path = "../rustc_arena" }
rustc_ast = { path = "../rustc_ast" }
rustc_const_eval = { path = "../rustc_const_eval" }
rustc_data_structures = { path = "../rustc_data_structures" }
rustc_errors = { path = "../rustc_errors" }
rustc_hir = { path = "../rustc_hir" }
rustc_index = { path = "../rustc_index" }
rustc_infer = { path = "../rustc_infer" }
rustc_macros = { path = "../rustc_macros" }
rustc_middle = { path = "../rustc_middle" }
rustc_mir_dataflow = { path = "../rustc_mir_dataflow" }
rustc_session = { path = "../rustc_session" }
rustc_span = { path = "../rustc_span" }
rustc_target = { path = "../rustc_target" }
rustc_trait_selection = { path = "../rustc_trait_selection" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
tracing = "0.1"
# tidy-alphabetical-end
# tRust: verification pipeline crates (used by trust_verify.rs)
serde_json = "1"
trust-cache = { path = "../../crates/trust-cache" }
trust-mir-extract = { path = "../../crates/trust-mir-extract" }
trust-router = { path = "../../crates/trust-router" }
trust-types = { path = "../../crates/trust-types" }
trust-vcgen = { path = "../../crates/trust-vcgen" }
trust-loop = { path = "../../crates/trust-loop" }
trust-convergence = { path = "../../crates/trust-convergence" }
trust-strengthen = { path = "../../crates/trust-strengthen" }

# tRust #796: Pipeline v2 feature gate forwards to trust-router's pipeline-v2.
[features]
pipeline-v2 = ["trust-router/pipeline-v2"]
