# trust-cache: Incremental verification cache for tRust
#
# Stores verification results keyed by function body hash. Skip re-verification
# for unchanged functions. Part of #57.
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: Apache 2.0

[package]
name = "trust-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
trust-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
