# trust-decompile: tMIR to idiomatic Rust decompiler
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: Apache 2.0

[package]
name = "trust-decompile"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Decompiles tRust verification IR (VerifiableFunction) to idiomatic Rust source code"

[dependencies]
trust-types = { workspace = true }
thiserror = { workspace = true }
