# trustc: The tRust compiler driver (DEPRECATED)
#
# DEPRECATED: This standalone wrapper is superseded by the native trust_verify
# MIR pass integrated directly into the compiler. Use `-Z trust-verify` with
# the stage1 rustc built by `./x.py build` instead.
#
# tRust #532: The z4_backend module here is DEPRECATED. The canonical z4
# integration now lives in trust-router/z4_backend.rs (behind the
# "z4-backend" feature). This module re-exports from trust-router.
#
# Build: cargo +nightly build -p trust-driver
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: MIT OR Apache-2.0

[package]
name = "trust-driver"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Andrew Yates <andrew@andrewdyates.com>"]
publish = false  # deprecated; do not publish

# tRust: trust-driver is its own workspace because z4's transitive deps
# (stacker ^0.1.22, cc ^1.2.33) conflict with compiler-pinned versions.
[workspace]

[features]
# The "trustc" feature gates the legacy binary and its heavy rustc_private deps.
# Default off so `cargo test --lib` builds only the loop orchestration library.
# tRust #532: z4 is now provided by trust-router's z4-backend feature.
trustc = [
    "dep:trust-mir-extract",
    "dep:trust-vcgen",
    "dep:trust-router",
    "dep:trust-report",
    "dep:trust-cache",
]

[lib]
name = "trust_driver"
path = "src/lib.rs"

[[bin]]
name = "trustc"
path = "src/main.rs"
required-features = ["trustc"]

[dependencies]
# Loop orchestration deps (always available)
trust-types = { path = "../trust-types" }
# tRust #815: LLVM2 bridge for verified codegen
trust-llvm2-bridge = { path = "../trust-llvm2-bridge" }
llvm2-codegen = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-verify = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-lower = { git = "https://github.com/andrewdyates/LLVM2" }
llvm2-ir = { git = "https://github.com/andrewdyates/LLVM2" }
# tRust #823: Translation validation for verified codegen
trust-transval = { path = "../trust-transval" }
trust-config = { path = "../trust-config" }
trust-strengthen = { path = "../trust-strengthen" }
trust-convergence = { path = "../trust-convergence" }
trust-debug = { path = "../trust-debug" }
trust-backprop = { path = "../trust-backprop" }
trust-cegar = { path = "../trust-cegar" }
trust-proof-cert = { path = "../trust-proof-cert" }
trust-lean5 = { path = "../trust-lean5" }
trust-testgen = { path = "../trust-testgen" }
lean5-kernel = { git = "https://github.com/andrewdyates/lean5" }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "1"

# Legacy binary deps (gated behind "trustc" feature)
trust-mir-extract = { path = "../trust-mir-extract", optional = true }
trust-vcgen = { path = "../trust-vcgen", optional = true }
# tRust #532: Enable z4-backend feature so trust-router provides Z4Backend.
trust-router = { path = "../trust-router", features = ["z4-backend"], optional = true }
trust-report = { path = "../trust-report", optional = true }
# tRust #527: CachePolicy consolidated into trust-cache.
trust-cache = { path = "../trust-cache", optional = true }

[dev-dependencies]
tempfile = "3"
# tRust #822: E2E binary round-trip test (compile -> lift -> verify structure)
trust-lift = { path = "../trust-lift", features = ["elf"] }
trust-binary-parse = { path = "../trust-binary-parse" }
