# trust-llvm2-bridge: Bridge between trust-types VerifiableFunction and LLVM2 LIR
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: Apache 2.0

[package]
name = "trust-llvm2-bridge"
description = "Bridge between trust-types VerifiableFunction and LLVM2 LIR"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
z4-proofs = []
transval = []
transval-full = []

[dependencies]
trust-types = { workspace = true }
llvm2-lower = { workspace = true }
llvm2-codegen = { git = "https://github.com/andrewdyates/LLVM2", default-features = false }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
