# trust-mir-extract: Bridge from rustc MIR to trust-types verification model
#
# Requires rustc_private — built as part of the compiler via x.py.
# The rustc crate dependencies use path references into compiler/.
#
# Author: Andrew Yates <andrew@andrewdyates.com>
# Copyright 2026 Andrew Yates | License: MIT OR Apache-2.0

[package]
name = "trust-mir-extract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Andrew Yates <andrew@andrewdyates.com>"]

[dependencies]
trust-types = { path = "../trust-types" }
# tRust: rustc crates needed for MIR extraction (resolved by bootstrap build)
rustc_abi = { path = "../../compiler/rustc_abi" }
rustc_ast_ir = { path = "../../compiler/rustc_ast_ir" }
rustc_hir = { path = "../../compiler/rustc_hir" }
rustc_middle = { path = "../../compiler/rustc_middle" }
rustc_span = { path = "../../compiler/rustc_span" }
